Modifay PR Separate notification post functions to class

--- a/prompt.html
+++ b/prompt.html
@@ -21,12 +21,10 @@
 
 <link rel="stylesheet" href="https://ssl.gstatic.com/docs/script/css/add-ons.css">
 <style>
-  h1 {font-size:12pt; padding:5px;}
-  p {margin:10px;}
+  h1 {font-size: 12pt; padding: 5px;}
+  p {margin: 10px;}
+  .send-button {margin-top: 10px;}
 </style>
- 
-<div id="list"></div>
-<div id="list2"></div>
 
 <h1>実行する案件を選択してください</h1>
 <form name="projectForm">
@@ -34,7 +32,7 @@
 	</select>
 </form>
 
-<div style="padding-top:10px;">
+<div class="send-button">
 	<input type="button" class="action" value="実行" onclick="sendMessage()" />
 </div>
 
